Refactor and addition of new functionality
